# VIO

./: .gitignore  CMakeLists.txt
core/: CMakeLists.txt
core/include/vio/: config.hpp  diagnostics.hpp  enums.hpp  types.hpp  vio_estimator.hpp
core/src/: empty.cpp
core/src/diagnostics/: diagnostics_builder.cpp  diagnostics_builder.hpp
core/src/estimator/: estimator.cpp  prepared_correspondences.hpp  vo_estimator.cpp  vo_estimator.hpp  vo_state_manager.cpp  vo_state_manager.hpp
core/src/frontend/: frontend.cpp
core/src/imu/: imu.cpp
core/src/initialization/: initialization.cpp
core/src/motion_geometry/: essential_matrix_solver.cpp  essential_matrix_solver.hpp  pose_recovery.cpp  pose_recovery.hpp  triangulator.cpp  triangulator.hpp
core/src/utils/: image_utils.cpp  image_utils.hpp  validation.cpp  validation.hpp
core/src/visual_processing/: feature_detector.cpp  feature_detector.hpp  klt_tracker.cpp  klt_tracker.hpp
core/tests/: CMakeLists.txt  essential_matrix_solver_test.cpp  estimator_default_state_test.cpp  estimator_invalid_frame_test.cpp  estimator_reset_test.cpp  estimator_test.cpp  estimator_valid_frame_test.cpp  feature_detector_test.cpp  klt_tracker_test.cpp  pose_recovery_test.cpp  smoke_test.cpp
docs/: HLD.md  frames.md
